pyhthon path = src

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-pythonpath = .
+pythonpath = src
 testpaths = test
 python_files = test_*.py
 addopts = --maxfail=0 --continue-on-collection-errors
