Updated file with correct path to tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 pythonpath = src
-testpaths = src/mlip_platform/tests
+testpaths = tests
 python_files = test_*.py
 addopts = --maxfail=0 --continue-on-collection-errors
